Style the default bootstrap button

--- a/src/style/widget.less
+++ b/src/style/widget.less
@@ -3,3 +3,12 @@
 .Header {
   color: #e01010;
 }
+
+.btn-default {
+  color: green;
+  &:focus {
+    outline: 0 none;
+    color: red;
+    background: #ffffff;
+  }
+}
