Add color transition on click

--- a/src/style/widget.less
+++ b/src/style/widget.less
@@ -4,8 +4,9 @@
   color: #e01010;
 }
 
-.btn-default {
+.btn-like {
   color: green;
+  transition: color 0.5s;
   &:focus {
     outline: 0 none;
     color: red;
